# cmake_mpi_hello

./: CMakeLists.txt  README.md  hello.cc
